<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyFirstAppActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="btn_open_fragment">Open Fragment</string>
    <string name="btn_add">Add Fragment</string>
    <string name="btn_replace">Replace Fragment</string>
    <string name="btn_map">Open Map</string>
    <string name="btn_get_contact">Get Contact</string>
    <string name="btn_save">Save</string>
    <string name="btn_get">Get</string>
    <string name="chooser_title">Open Map</string>
</resources>
