<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <EditText 
      android:id="@+id/edit_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="@string/edit_message" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_send"
      android:onClick="sendMessage" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_save"
      android:onClick="saveMessage" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_get"
      android:onClick="getMessage" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_open_fragment"
      android:onClick="openFragmentView" />
</LinearLayout>

