<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_add"
      android:onClick="addFragment" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_replace"
      android:onClick="replaceFragment" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_map"
      android:onClick="openMap" />
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_get_contact"
      android:onClick="getContact" />
  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	       android:id="@+id/fragment_container"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content" />
</LinearLayout>